# rag-project

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-INDEX.md  BUILD_MODE_COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENT_STORAGE_GUIDE.md  FRONTEND_README.md  GIT_WORKFLOW.md  HIVE_MIND_REPORT.md  PROJECT_STRUCTURE.md  RAG_FIX_REPORT.md  RAG_SYSTEM_INTEGRATION_COMPLETE.md  README.md  SYSTEM_STATUS_REPORT.md  TESTING_INDEX.md  TESTING_QUICK_START.md  TESTING_ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  TEST_SUMMARY_REPORT.md  conftest.py  constitutional  corpus_bridge.py  fix.sh  package-lock.json  package.json  pyproject.toml  rag_benchmark.py  repair_missing_checkpoint.json  setup_telegram_workflow.sh  start.sh  start_rag_server.sh  start_rag_server_ollama.sh  start_system.sh  stop_rag_server.sh  stop_system.sh
api/: harvest_stats_api.py  harvest_stats_server.py
app/: main.py
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: constitutional_routes.py  document_routes.py
backend/app/core/: error_handlers.py  exceptions.py
backend/app/services/: base_service.py  bm25_service.py  confidence_signals.py  config_service.py  critic_service.py  embedding_service.py  grader_service.py  graph_service.py  guardrail_service.py  intent_classifier.py  intent_routing.py  legal_abbreviations.py  llm_service.py  orchestrator_service.py  query_processor_service.py  query_rewriter.py  rag_fusion.py  reranking_service.py  retrieval_orchestrator.py  retrieval_service.py  source_hierarchy.py  sse_stream_service.py  structured_output_service.py  swedish_compound_splitter.py
backend/app/utils/: logging.py
backend/data/: procedural_guides.json
backend/tests/: conftest.py  test_api_response_contract.py  test_constitution.py  test_crag_integration.py  test_critic_revise_loop.py  test_epr_regression.py  test_llm_service.py  test_orchestrator_simple.py  test_orchestrator_structured_output.py  test_structured_output.py
cli/: GEMINI_HANDOFF.md  HANDOVER_CONTEXT.md  SESSION_STATE.md  __init__.py  assets.py  boot_sequence.py  client.py  commands.py  config.py  gpu_panel.py  main.py  requirements.txt  tui_app.py  ui.py
docs/: AGENTS.md  ARCHITECTURE_ANALYSIS.md  BACKEND_STATUS.md  BOLAGSVERKET_SCRAPE_SUMMARY.md  CODEX_TODO_SSE_STREAM_REFACTORING.md  COMPREHENSIVE_RESEARCH_ANALYSIS.md  CONTEXTUAL_RETRIEVAL_IMPLEMENTATION.md  CURRENT_STATE_ANALYSIS.md  DATABASE_OPTIMIZATION.md  DATABASE_OPTIMIZATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FAS1_IMPLEMENTATION_GUIDE.md  FAS1_VERIFICATION_REPORT.md  FAS3_INTEGRATION_REPORT.md  FAS5_LAUNCH_REPORT.md  FILE_PATHS.txt  FOLKHALSOMYNDIGHETEN_SCRAPER_README.md  FOLKHALSOMYNDIGHETEN_SUMMARY.txt  GITHUB_PUBLICATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  KONSUMENTVERKET_RAPPORT.md  KRONOFOGDEN_HARVEST_REPORT.md  MODEL_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PRV_HARVEST_REPORT.md  QUICK_START.md  REFACTORING_SUMMARY.md  REPOSITORY_STRATEGY.md  RIKSBANKEN_SCRAPER_README.md  STEG2_1_VERIFICATION.md  STEG3_1_VERIFICATION.md  STEG3_2_VERIFICATION.md  STEG3_3_VERIFICATION.md  STEG4_1_4_2_VERIFICATION.md  TECHNICAL_DEBT_ANALYSIS.md  TESTING_GUIDE.md  WEBSOCKET_FIX.md  WEEKLY_CORPUS_REPORT_INDEX.md  WEEKLY_CORPUS_REPORT_SUMMARY.md  (+5 more)
eval/: eval_runner.py  ragas_wrapper.py
forstudie/: JURIDIK HOLY SHIT.txt
indexers/: chromadb_insert.py  chromadb_progress.py  chromadb_to_qdrant.py  contextual_chromadb_indexer.py  contextual_ingestor.py  embed_documents.py  import_json_to_chromadb.py  index_diva_to_chromadb.py  index_kemi_to_chromadb.py  index_naturvardsverket_to_chromadb.py  index_socialstyrelsen_to_chromadb.py  index_to_chromadb.py  insert_prv_simple.py  load_arn_to_chromadb.py  migrate_to_bge_m3_v2.py  migrate_to_bge_m3_v3.py  migrate_vr_to_chromadb.py  prv_insert_minimal.py  repair_missing_bge_m3.py  seed_constitutional_examples.py  test_chromadb.py  verify_chromadb.py  verify_jk_data.py  verify_kemi.py  verify_naturvardsverket.py
juridik-ai/: BESTA_MODELL.md  DELIVERABLES.txt  DELIVERY_README.md  DISKUTRYMME.md  DOMSTOL_FINAL_REPORT.json  DOMSTOL_HARVEST_STATUS.md  FILES_CREATED.txt  GPU_PRESTANDA.md  HARVEST_README.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_CHECKLIST.md  MODELL_ANALYS.md  MODELL_OPTIMERING.md  MODELL_REKOMMENDATIONER.md  Modelfile.qwen-juridik  Modelfile.qwen-myndighet  Modelfile.qwen3-myndighet  README.md  RIKSDAGEN_INDEX.md  RIKSDAGEN_MODULE_SUMMARY.md  TESTA_MODELLER.sh  VRAM_ANALYS.md  check_harvest_status.py  domstol_harvest.py  jo_complete_scraper.py  jo_riksdagen_scraper.py  jo_se_scraping_analysis.md  jo_test_scraper.py  pytest.ini  requirements.txt  total_harvest.py
(+362 files in other folders)
