[project]
name = "constitutional-ai"
version = "1.0.0"
description = "Swedish government document RAG system with 535K+ indexed documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
# Target Python 3.10+
target-version = "py310"

# Line length to match common Python standards
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "venv_scraper",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "node_modules",

    "chromadb_data",
    "pdf_cache",
    "data",
    "backups",
    "archive",
]


[tool.ruff.lint]
# Enable common rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that conflict with project patterns
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (FastAPI Depends)
    "B905",   # zip without strict= (Python 3.10+ feature)
    "SIM108", # Use ternary operator (sometimes less readable)
    "UP007",  # Use X | Y for type union (keep Optional for clarity)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["scrapers", "indexers", "utils"]
known-third-party = ["requests", "bs4", "chromadb", "qdrant_client", "fastapi", "typer", "rich"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow assert statements in tests
"tests/**/*.py" = ["S101"]
"**/test_*.py" = ["S101"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Too strict for existing codebase
check_untyped_defs = true
ignore_missing_imports = true

# Exclude directories
exclude = [
    "venv",
    "venv_scraper",
    "node_modules",
    "chromadb_data",
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
norecursedirs = []
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (requires real services)",
    "unit: marks tests as unit tests (uses mocks)",
    "slow: marks tests as slow (skip by default)",
    "ollama: tests that require a running Ollama instance (skipped by default)",
]
